--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 *.yaml
 *.json
-*.pyc
-*.pyo
+*.py[co]
 __pycache__/
 .idea/
 .vscode/
 log/
 translators/
-adapters/
 plugins/
 config/
+/adapters/*
+!/adapters/adapter_stdin/
+/resources/*
+!/resources/default_img/
